# WNR

./: .env  .gitignore  README copy.md  README.md  TODO.md  beispiel.py  docker-compose.yaml  freeports.ps1  mqtt_multi_client.py  mqtt_websocket_client.py  portscan.py  requirements.txt  test.json
Info-Files/: INFO.md
Info-Files-Database/: Database.md  fragen.md
Info-Files-Database/Cyper_Querrys/: INFO.md  (+2 more)
Raspberry/: config.py  getcolor.py  getsensordata.py  main.py  opcua_Rasp.py  requirements.txt  start_services.py  stream.py  streamtest.py
Robot/: README.md  TODO.md  WNR_dark.xml  WNR_theme.xml  requirements.txt
WNR-Frontend/: package-lock.json  package.json  todo.txt  tsconfig.json  vite.config.ts
cypher/: constraints.cypher
datacenter/: .env  Cargo.toml
datacenter/src/: command_handler.rs  db.rs  ip_payload_handler.rs  main.rs  mqtt_handler.rs  webrtc_server.rs
datacenter/src/db_operations/: admin.rs  bigfiles.rs  crud.rs  cypher_queries.rs  logfunctions.rs  mod.rs  relationshipexport.rs  sharding.rs  specificoperations.rs
datacenter/src/db_operations/tests/: db_operations_test.rs  mod.rs
datacenter/src/mqtt/: connection.rs  mod.rs  publisher.rs  request_processor.rs
example-python-database/: generate_lage.py  livedataviewer.py  mqtt_multi_client.py  plot_benchmark.py  system.py  tcp_communication_example.py  test.json  virtualize.py
react-mqtt-client-app/: README.md  package-lock.json  package.json
treejs-test/: camercontroller.js  index.html  main.js  object-manager.js  package-lock.json  package.json  render-manager.js
(+106 files in other folders)
