[package]
name = "datacenter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
neo4rs = "0.8.0"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11.5"
rumqttc = { version = "0.24", features = ["websocket", "use-rustls"] }
chrono = "0.4"
futures = "0.3.31"
fern = "0.7.1"
tokio-util = { version = "0.7", features = ["codec"] }
json-stream = "0.1.1"
regex = "1.11.0"
rayon = "1.9"
memmap2 = "0.9"
thiserror = "2.0.12"
